[gd_scene load_steps=21 format=3 uid="uid://beus3nefqeyjk"]

[ext_resource type="Script" uid="uid://cxaoxpxvfcx4q" path="res://Scenes/farm_modal.gd" id="1_s4kr6"]
[ext_resource type="FontFile" uid="uid://dtg8qxe14m8ef" path="res://Assets/Fonts/argentum-sans.medium.ttf" id="2_nen8p"]
[ext_resource type="Shader" uid="uid://2vfgwygibjq2" path="res://Scenes/arm_pic.gdshader" id="2_nxypk"]
[ext_resource type="Texture2D" uid="uid://wglmkc4g02dg" path="res://Assets/Background/auth_bg.png" id="3_aw3g6"]
[ext_resource type="Texture2D" uid="uid://boo5l23scoya1" path="res://Assets/Icons/back_icon.png" id="3_s4kr6"]
[ext_resource type="FontFile" uid="uid://caw5hde3doeyx" path="res://Assets/Fonts/argentum-sans.semibold.ttf" id="4_nj80e"]
[ext_resource type="Script" uid="uid://bcnyg4qos0dr7" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="5_aw3g6"]
[ext_resource type="Script" uid="uid://mr2fibppbyip" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="6_nj80e"]
[ext_resource type="StyleBox" uid="uid://d4kcxwi6ggvys" path="res://Assets/StyleRes/farm_scan_select_button.tres" id="7_4xdx6"]
[ext_resource type="FontFile" uid="uid://d1hefddkwf7sl" path="res://Assets/Fonts/argentum-sans.vf-regular.ttf" id="7_nj80e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlo60"]
bg_color = Color(1, 1, 1, 1)
shadow_color = Color(0, 0, 0, 0.270588)
shadow_size = 15
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oh1sv"]
bg_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 150
corner_radius_top_right = 150
corner_radius_bottom_right = 150
corner_radius_bottom_left = 150
corner_detail = 20

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4xdx6"]
shader = ExtResource("2_nxypk")
shader_parameter/radius_scale = 1.0
shader_parameter/rounded_corner_top_left = true
shader_parameter/rounded_corner_top_right = true
shader_parameter/rounded_corner_bottom_left = true
shader_parameter/rounded_corner_bottom_right = true
shader_parameter/width = 1.0
shader_parameter/height = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nxypk"]
bg_color = Color(0.819608, 0.835294, 0.858824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qrigd"]
bg_color = Color(0.819608, 0.835294, 0.858824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6k7y"]
bg_color = Color(1, 1, 1, 0.729412)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_230lw"]
bg_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0s0pr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 10.0
expand_margin_right = 10.0

[sub_resource type="Resource" id="Resource_0s0pr"]
script = ExtResource("6_nj80e")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_i3j26"]
script = ExtResource("6_nj80e")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[node name="FarmModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s4kr6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mlo60")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 19.0
offset_top = -846.0
offset_right = -19.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_oh1sv")

[node name="FarmPic" type="TextureRect" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer/Panel"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_4xdx6")
custom_minimum_size = Vector2(170, 170)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("3_aw3g6")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="FarmName" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("4_nj80e")
theme_override_font_sizes/font_size = 28
text = "Rice Farm"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="CropType" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("4_nj80e")
theme_override_font_sizes/font_size = 16
text = "Sinandomeng"
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(116, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("2_nen8p")
text = "Description"
horizontal_alignment = 1

[node name="Description" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SmoothScrollContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nxypk")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("2_nen8p")
theme_override_font_sizes/font_size = 18
text = "Farm details"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(122, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "Created at:"

[node name="CreatedAt" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(129, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "October 2025"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(122, 0)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "Last update"

[node name="UpdatedAt" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "November 2025"

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(116, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "Owner:"

[node name="Owner" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(129, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "wonyoung"

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(116, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "Total Scans:"

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(129, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "10"

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(116, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "Last Scan"

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
custom_minimum_size = Vector2(129, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "10/31/2025"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "Location:"

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer5"]
custom_minimum_size = Vector2(129, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
text = "San Jose, Camarines Sur"
text_overrun_behavior = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qrigd")

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="SoilScan" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/VBoxContainer2/HBoxContainer" groups=["FarmScanButtons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.450648, 0.450648, 0.450648, 1)
theme_override_colors/font_pressed_color = Color(0.0784314, 0.592157, 0.270588, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = ExtResource("7_4xdx6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_e6k7y")
theme_override_styles/hover = SubResource("StyleBoxFlat_230lw")
theme_override_styles/pressed = ExtResource("7_4xdx6")
theme_override_styles/normal = SubResource("StyleBoxFlat_0s0pr")
toggle_mode = true
button_pressed = true
text = "Soil scan"

[node name="PlantScanButton2" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/VBoxContainer2/HBoxContainer" groups=["FarmScanButtons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.450648, 0.450648, 0.450648, 1)
theme_override_colors/font_pressed_color = Color(0.0784314, 0.592157, 0.270588, 1)
theme_override_fonts/font = ExtResource("7_nj80e")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = ExtResource("7_4xdx6")
theme_override_styles/disabled = SubResource("StyleBoxFlat_e6k7y")
theme_override_styles/hover = SubResource("StyleBoxFlat_230lw")
theme_override_styles/pressed = ExtResource("7_4xdx6")
theme_override_styles/normal = SubResource("StyleBoxFlat_0s0pr")
toggle_mode = true
text = "Plant scan"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Panel2" type="Panel" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qrigd")

[node name="SmoothScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
script = ExtResource("5_aw3g6")
wheel_scroll_damper = SubResource("Resource_0s0pr")
dragging_scroll_damper = SubResource("Resource_i3j26")
metadata/_custom_type_script = "uid://bcnyg4qos0dr7"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/SmoothScrollContainer/VBoxContainer/VBoxContainer2/SmoothScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="TextureButton" parent="Panel/VBoxContainer/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 85)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0537037
anchor_right = 0.183333
anchor_bottom = 0.0885417
offset_left = -10.0
offset_top = 25.0
offset_right = -10.0
offset_bottom = 25.0
texture_normal = ExtResource("3_s4kr6")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Panel/VBoxContainer/Panel/BackButton" to="." method="_on_back_button_pressed"]
